src/objects/Billing_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Profiles</relationshipLabel>
        <relationshipName>Billing_Profiles1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Agency_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Agency Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Profiles (Billing Agency Name)</relationshipLabel>
        <relationshipName>Billing_Profiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Address__c</fullName>
        <label>Billing Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_City__c</fullName>
        <label>Billing Contact City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Country__c</fullName>
        <label>Billing Contact Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <label>Billing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_State_Province__c</fullName>
        <label>Billing Contact State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Zip_Code__c</fullName>
        <label>Billing Contact Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Profiles</relationshipLabel>
        <relationshipName>Billing_Profiles1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Delivery_Method__c</fullName>
        <label>Billing Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Party_Name__c</fullName>
        <label>Billing Party Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>PR Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <description>Unique profile number</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>Auto-generated unique profile number</inlineHelpText>
        <label>Billing Profile #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Installment Bill</fullName>
                </value>
                <value>
                    <fullName>Intercompany EX</fullName>
                </value>
                <value>
                    <fullName>Intercompany MKT</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>Media Credits</fullName>
                </value>
                <value>
                    <fullName>Non-Cash Revenue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill</fullName>
                </value>
                <value>
                    <fullName>zIB-Emedia Only</fullName>
                </value>
                <value>
                    <fullName>zIB-Print/Emedia Combined</fullName>
                </value>
                <value>
                    <fullName>zIB-Print Only</fullName>
                </value>
                <value>
                    <fullName>zIntercompany Transfer - (P)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DFP_ID__c</fullName>
        <formula>Billing_Account__r.HW_DFP_Advertiser_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DFP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the billing profile inactive?</description>
        <label>Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Billing Profile</label>
    <nameField>
        <label>Billing Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Profiles</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>All in</description>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>